<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/scelta_title"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:text="@string/scelta_titolo"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_label"
        android:text="@string/nome"
        android:textColor="@color/black"
        android:layout_above="@+id/name"
        android:labelFor="@+id/name"
        android:layout_centerInParent="true"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="15"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:layout_above="@id/surname_label"
        android:id="@+id/name"
        android:autofillHints="Mario" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/surname_label"
        android:text="@string/cognome"
        android:textColor="@color/black"
        android:layout_above="@+id/surname"
        android:layout_centerHorizontal="true"
        android:labelFor="@+id/surname"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:ems="15"
        android:maxLines="1"
        android:inputType="textCapWords"
        android:layout_height="wrap_content"
        android:id="@+id/surname"

        android:autofillHints="Rossi" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/surname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:id="@+id/type_group"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_title"
            android:textColor="@color/black"
            android:id="@+id/scelta_customer"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rider_title"
            android:textColor="@color/black"
            android:id="@+id/scelta_rider"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/gestore_title"
            android:id="@+id/scelta_gestore"/>

    </RadioGroup>
    <Button
        android:id="@+id/end"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/gradient_orange"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/end"/>
</RelativeLayout>