<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/page_title"
        android:text="@string/richiama_il_tuo_ordine"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:padding="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/page_title"
        android:id="@+id/page_sub_title"
        android:text="@string/annulla_un_ordine_senza_pagare_niente"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="5dp"
        />


<androidx.cardview.widget.CardView
    android:layout_below="@id/page_sub_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/order"
    android:layout_margin="10dp"
    card_view:cardBackgroundColor="@color/mimosa"
    card_view:cardCornerRadius="22dp"
    card_view:cardElevation="3dp"
    card_view:contentPadding="4dp"
    android:foreground="?selectableItemBackground"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/ordine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordine_n"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ordine"
            android:text="@string/totale"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/prodotti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot"
            android:text="@string/prodotti"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lista_prodotti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/prodotti" />

        <Button
            android:id="@+id/richiama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
           android:layout_alignBaseline="@id/lista_prodotti"
            android:layout_margin="10dp"
            android:background="@drawable/grad_menu"
            android:text="@string/richiama" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
</RelativeLayout>