<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:layout_margin="20dp"
    android:focusable="true">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="161dp"
        android:layout_height="158dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@mipmap/ic_launcher_foreground" />
    <TableLayout
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:id="@+id/selectTab"
        android:layout_below="@+id/logo">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scelta_login"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="50dp">

            </TextView>
        <TableRow>
            <ImageView
                android:id="@+id/ggl"
                android:clickable="true"
                android:src="@drawable/ic_google__g__logo"
                android:focusable="true">
            </ImageView>
            <ImageView
                android:id="@+id/mail"
                android:layout_weight="2"
                android:src="@drawable/ic_baseline_email_24">
            </ImageView>
        </TableRow>

    </TableLayout>
<TableLayout
    android:id="@+id/logTab"
    android:visibility="invisible"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:stretchColumns="*"
    android:layout_marginTop="20dp"
    android:layout_below="@+id/logo">
    <TableRow>
        <TextView
            android:id="@+id/usr_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/email" />
    </TableRow>

    <TableRow>
        <EditText
            android:id="@+id/usr"
            android:hint="@string/hintmail"
            android:gravity="center"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/pwd_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/password" />
    </TableRow>

    <TableRow>
        <EditText

            android:id="@+id/pwd"
            android:imeOptions="actionDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />


    </TableRow>
    <TableRow>
        <CheckBox
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/mostra_password"
            android:textColor="@color/black"
            android:id="@+id/mostra"/>
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/signin"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:background="@drawable/gradient_orange">

        </Button>
    </TableRow>
</TableLayout>
</RelativeLayout>
</ScrollView>