<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PagamentoActivity">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="26sp"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:id="@+id/titolo"
    android:layout_margin="10dp"
    android:text="@string/scegli_metodo_di_pagamento"/>
<TextView
    android:id="@+id/label"
    android:layout_below="@+id/titolo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginStart="15dp"
    android:textSize="17sp"
    android:textColor="@color/black"
    android:text="@string/in_entrambi_i_casi_il_pagamento_avver_con_il_rider"
    />
  <RadioGroup
      android:layout_marginTop="55dp"
    android:id="@+id/group"
    android:layout_below="@id/label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"

      android:layout_centerHorizontal="true"
      >
    <RadioButton
        android:id="@+id/contanti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
      android:text="@string/contanti"/>
    <RadioButton
        android:id="@+id/carta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="40dp"
      android:text="@string/carta_di_credito"/>
  </RadioGroup>
  <TextView
      android:id="@+id/tot_label"
      android:layout_marginTop="50dp"
      android:layout_marginEnd="5dp"
      android:textStyle="bold"
      android:layout_marginStart="15dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/totale"
      android:textColor="@color/black"
      android:textSize="20sp"
      android:layout_below="@id/group"
      />
  <TextView
      android:id="@+id/tot"
      android:layout_marginTop="50dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cash"
      android:textColor="@color/black"
      android:textSize="20sp"
      android:layout_marginEnd="80dp"
      android:layout_alignParentEnd="true"
      android:layout_below="@id/group"
      />

  <TextView
      android:id="@+id/indirizzo_label"
      android:layout_marginTop="30dp"
      android:textStyle="bold"
      android:layout_marginEnd="5dp"
      android:layout_marginStart="15dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/indirizzo"
      android:textColor="@color/black"
      android:textSize="20sp"
      android:layout_below="@id/tot_label"
      />
  <TextView
      android:id="@+id/indirizzo"
      android:layout_marginTop="5dp"
      android:layout_marginStart="20dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Via rossi"
      android:textColor="@color/black"
      android:textSize="18sp"
      android:layout_below="@id/indirizzo_label"
      />
  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
    android:id="@+id/btn"
    android:text="@string/end"
      android:textColor="@color/black"
    android:background="@drawable/gradient_orange"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:layout_margin="30dp"/>
<!--

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rel_contante"
        android:layout_below="@id/label"
        android:layout_marginStart="20dp"
        >

        <ImageView
            android:id="@+id/img_contante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:src="@drawable/money"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_contante"
            android:text="@string/contanti"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rel_carta"
        android:layout_below="@id/label"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        >

        <ImageView
            android:id="@+id/img_carta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:src="@drawable/credit_card"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_carta"
            android:text="@string/carta_di_credito"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="20dp"
            android:textSize="25sp"/>
    </RelativeLayout>
-->


</RelativeLayout>