<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titolo"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="@color/mimosa"
        card_view:cardCornerRadius="30dp"
        card_view:cardElevation="3dp"
        card_view:contentPadding="4dp"
        android:foreground="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dati_personali"
                android:textColor="@color/black"
                android:textSize="35sp"
                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_email"
        android:text="@string/email"
        android:textSize="30sp"
        android:layout_below="@id/titolo"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/email"
        android:layout_below="@id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:maxLines="1"
        android:text="@string/email"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_nome"
        android:text="@string/nome"
        android:textSize="30sp"
        android:layout_below="@id/email"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/nome"
        android:layout_below="@id/label_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:maxLines="1"
        android:textColor="@color/black"
        android:text="@string/nome"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_cognome"
        android:text="@string/cognome"
        android:textSize="30sp"
        android:layout_below="@id/nome"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/cognome"
        android:layout_below="@id/label_cognome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:maxLines="1"
        android:text="@string/cognome"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_tipo"
        android:text="@string/tipo"
        android:textSize="30sp"
        android:layout_below="@id/cognome"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_tipo"
        android:text="@string/tipo"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_indirizzo"
        android:text="@string/indirizzo"
        android:textSize="30sp"
        android:layout_below="@id/tipo"
        android:textColor="@color/black"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/indirizzo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_indirizzo"
        android:maxLines="2"
        android:text="@string/indirizzo"
        android:textColor="@color/black"
        android:visibility="invisible"
        android:textSize="25sp"/>

</RelativeLayout>